fix: images now visible from 'assets/img/'

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -54,6 +54,11 @@ figcaption + p {
   border-radius: 50%;
 }
 
+#sja {
+  border-radius: 0;
+  width: 200px;
+}
+
 #sky-logo {
   width: 120%;
 }
